# wednesday

./: .clang-format  .gitignore  MODULE.bazel  Makefile  README.md  defs.bzl
.github/workflows/: bazel.yml  makefile.yaml
include/: blob.h  btree.h  deffer.h  error.h  latch.h  page.h  pager.h  snow.h  util.h  uuid.h  varint.h  winter.h
src/: blob.c  btree.c  error.c  latch.c  page.c  pager.c  test.c  uuid.c  varint.c
src/btree/: BUILD  btree.c  btree.h  btree_test.c
src/io/: BUILD  io.c  io.h  io_test.c
src/pager/: BUILD  pager.c  pager.h  pager_test.c
src/utils/: BUILD  defer.h  defer_test.c  error.c  error.h  error_test.c  math.h  math_test.c  test.h  utils.h
src/uuid/: BUILD  uuid.c  uuid.h  uuid_test.c
src/varint/: BUILD  varint.c  varint.h  varint_test.c
utils/: BUILD  defer.h  defer_test.c  error.c  error.h  test.c
