module(name = "wednesday", version = "0.1")

bazel_dep(name = "rules_cc", version = "0.1.0")

# testing frameworkk
snow_repo = use_repo_rule("//third_party/snow:snow.bzl", "snow_repo")
snow_repo(
    name = "snow",
    version = "2.3.2",
    sha256 = "410694deef79fde5d1515e1722d0b2af68cc9d1eef816db4f4495e01ae1f9a6a",
)
